--- a/app/src/main/res/layout/layout_second_news_card.xml
+++ b/app/src/main/res/layout/layout_second_news_card.xml
@@ -28,7 +28,7 @@
                 android:paddingRight="16dp"
                 android:textColor="@color/textPrimary"
                 android:textSize="16sp"
-                tools:text="@string/got_titletext" />
+                tools:text="@string/pokemon_title_3" />
 
             <TextView
                 android:id="@+id/card_subtitle"
@@ -40,7 +40,7 @@
                 android:paddingRight="16dp"
                 android:textColor="@color/textSecondary"
                 android:textSize="14sp"
-                tools:text="@string/got_subtext" />
+                tools:text="@string/pokemon_description_3" />
         </LinearLayout>
 
         <ImageView
@@ -61,7 +61,7 @@
         android:paddingRight="16dp"
         android:textColor="@color/textPrimary"
         android:textSize="14sp"
-        tools:text="@string/got_summarytext" />
+        tools:text="@string/pokemon_summary_3" />
 
 </LinearLayout>
 
